彩票 修正载入规则问题