@@ -4,6 +4,7 @@ import org.jeasy.rules.annotation.Action;
 import org.jeasy.rules.annotation.Condition;
 import org.jeasy.rules.annotation.Priority;
 import org.jeasy.rules.annotation.Rule;
+import org.jeasy.rules.api.Facts;
 
 import java.util.List;
 import java.util.Map;
@@ -18,20 +19,19 @@ public class AddFlagRule {
     }
 
     @Condition
-    public boolean when(Map<String, Object> facts) {
-        List<String> ruleSuite = (List<String>) facts.get("ruleSuite");
+    public boolean when(Facts facts) {
+        List<String> ruleSuite = facts.get("ruleSuite");
         return ruleSuite.stream().anyMatch(item -> item.matches("^add-flag-.*$"));
     }
 
     @Action
-    public void then(Map<String, Object> facts) {
-        List<String> ruleSuite = (List<String>) facts.get("ruleSuite");
+    public void then(Facts facts) {
+        List<String> ruleSuite = facts.get("ruleSuite");
         List<String> flags = ruleSuite.stream()
                 .filter(item -> item.matches("^add-flag-.*$"))
                 .map(item -> item.split("add-flag-")[1])
-                .collect(Collectors.toList());
+                .toList();
 
-        ((Map<String, Object>) facts.get("attached")).put("flag", flags);
-        facts.put("attached", facts.get("attached"));
+        facts.put("attachedFlags", flags);  // 假设有一个键 attachedFlags
     }
 }
